<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="#3A225E">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Event Options"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp"/>

    <Button
        android:id="@+id/button_start_draw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Start Draw" />

    <Button
        android:id="@+id/button_message_participants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="message entrants" />

    <Button
        android:id="@+id/button_edit_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Edit Event" />

    <Button
        android:id="@+id/seeDetailsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="See Event Details" />

    <Button
        android:id="@+id/exportCSVButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Export CSV" />
    <Button
        android:id="@+id/button_dialog_event_options_showLocationHeatMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="See Entrant's Locations Heatmap" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#C13F3F"
        android:text="Cancel" />

</LinearLayout>
