...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#49317C"
    tools:context=".organizer.OrganizerMainFragment">

    <Button
        android:id="@+id/button_organizer_main_fragment_add_event"
        android:layout_width="186dp"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#2E2E2E"
        android:text="@string/add_event"
        android:textSize="20sp"
...
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_organizer_main_fragment_add_event">
        <LinearLayout
            android:id="@+id/events_container_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">
        </LinearLayout>

...
