<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFB0"
    tools:context=".organizer.AddEventFragment"> <!-- can change context to .EditEventFragment -->

    <Button
        android:id="@+id/buttonUploadPhoto2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#2E2E2E"
        android:text="Add Poster"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/imagePreview2"
        app:layout_constraintEnd_toEndOf="@+id/editTextDescription"
        app:layout_constraintStart_toStartOf="@+id/editTextDescription" />

    <ImageView
        android:id="@+id/imagePreview2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/saveEventButton"
        app:layout_constraintEnd_toEndOf="@+id/buttonUploadPhoto2"
        app:layout_constraintStart_toStartOf="@+id/buttonUploadPhoto2"
        tools:src="@tools:sample/backgrounds/scenic"
        tools:visibility="visible" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="186dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#2E2E2E"
        android:text="Cancel"
        app:layout_constraintBottom_toTopOf="@+id/editTextName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/saveEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#2E2E2E"
        android:text="Save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="Event Name"
        android:inputType="text"
        android:textColor="#B1B0B0"
        android:textColorHint="#BCBCBC"
        app:layout_constraintBottom_toTopOf="@+id/editTextMaxPeople"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextMaxPeople"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="Max Amount Of People"
        android:inputType="text"
        android:textColor="#FFFFFF"
        android:textColorHint="#BCBCBC"
        app:layout_constraintBottom_toTopOf="@+id/editTextDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="Date MMM DD YYYY"
        android:inputType="text"
        android:textColor="#FFFFFF"
        android:textColorHint="#BCBCBC"
        app:layout_constraintBottom_toTopOf="@+id/editTextDeadline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextDeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="Deadline MMM DD YYYY"
        android:inputType="text"
        android:textColor="#FFFFFF"
        android:textColorHint="#BCBCBC"
        app:layout_constraintBottom_toTopOf="@+id/editTextGenre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="Genre"
        android:inputType="text"
        android:textColor="#FFFFFF"
        android:textColorHint="#BCBCBC"
        app:layout_constraintBottom_toTopOf="@+id/fragment_autoComplete_event_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/fragment_autoComplete_event_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="Location (optional)"
        android:inputType="text"
        android:textColor="#FFFFFF"
        android:textColorHint="#BCBCBC"
        app:layout_constraintBottom_toTopOf="@+id/maxamountofentrants"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/maxamountofentrants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="Max Entrants (optional)"
        android:inputType="text"
        android:textColor="#FFFFFF"
        android:textColorHint="#BCBCBC"
        app:layout_constraintBottom_toTopOf="@+id/editTextDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="Description(optional)"
        android:textColor="#FFFFFF"
        android:textColorHint="#BCBCBC"
        app:layout_constraintBottom_toTopOf="@+id/buttonUploadPhoto2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
