...
        android:layout_weight="1"
        android:text="@string/details"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/event_qr_code_imageview"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/event_qr_code" />
</LinearLayout>

